--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     ],
     "minimum-stability": "stable",
     "require": {
+        "php": "7.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.1"
