--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "7.2"
+        "php": ">=7.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.1"
+        "phpunit/phpunit": ">=6.0.0 <9"
     },
     "autoload": {
         "psr-4": {
