--- a/.gitattributes
+++ b/.gitattributes
@@ -5,5 +5,6 @@
 .gitignore export-ignore
 .circleci export-ignore
 phpunit.xml.dist export-ignore
+CHANGELOG.md export-ignore
 README.md export-ignore
 tests/ export-ignore
