--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "php": ">=7.2"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=6.0.0 <9"
+        "phpunit/phpunit": ">=6.0.0 <9",
+        "squizlabs/php_codesniffer": "^3.5",
+        "phpstan/phpstan": "^0.12.31"
     },
     "autoload": {
         "psr-4": {
